--- a/Frontend/android/app/src/main/AndroidManifest.xml
+++ b/Frontend/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.disaster_forecast">
+
+    <!-- ✅ Required permission for Internet access -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application
-        android:label="flutter_application_1"
+        android:label="Disaster Forecast"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
@@ -15,32 +21,32 @@
             android:windowSoftInputMode="adjustResize">
             
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"/>
-            
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"/>
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <!-- Google Maps API Key -->
+        <!-- ✅ Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD98Po_N0hqD0BI1lMiTQRzBThGZ9HnNOM"/>
 
-        <!-- Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <!-- Don't delete this meta-data: used by Flutter tool -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
 
-    <!-- Required to query activities that can process text -->
+    <!-- ✅ Optional: Required for certain text-processing intents -->
     <queries>
-        <intent>
+        <intent>cd bs   
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
 </manifest>
