--- a/Frontend/pubspec.yaml
+++ b/Frontend/pubspec.yaml
@@ -10,18 +10,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
   cupertino_icons: ^1.0.8
-  flutter_lints: ^4.0.0
-  fl_chart: ^0.64.0
-  google_maps_flutter: ^2.5.0
+  fl_chart: ^0.70.0
+  google_maps_flutter: ^2.14.0
   http: ^1.5.0
-  shared_preferences: ^2.5.3
-
+  intl: ^0.19.0
+  shared_preferences: ^2.3.3
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
+
+dependency_overrides:
+  flutter_plugin_android_lifecycle: ^2.0.31
 
 flutter:
   uses-material-design: true
